--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-<title>R3d Cr3sc3nt</title>
+<title>R3d Cr3sc3nt | iCTF</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -11,6 +11,8 @@
 <div class="col-sm-3 col-md-2 sidebar">
   <ul class="nav nav-sidebar">
     <li><a href="/">Home</a></li>
+    <li><a href="/services">Services</a></li>
+    <li><a href="/teams">Teams</a></li>
     <li><a href="/scoreboard">Scoreboard</a></li>
     <li><a href="/exploited-services">Exploited Services</a></li>
     <li><a href="/service-states">Service States</a></li>
@@ -19,6 +21,7 @@
 </div>
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
   <h1 class="page-header">iCTF Dashboard</h1>
+  <h2>{{title}}</h2>
   {% block body %}{% endblock %}
 </div>
 </div>
